# dom

./: .gitignore  README.md  bootstrap-dom.ps1  build-dom-client.ps1  build-full-dom.ps1  dom.sources.json  start-dom-server.ps1  stop-dom-server.ps1
Libraries/win64/cache_keys/: patches
patches/: teamgram-tdesktop-dom.patch
teamgram-tdesktop/: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  REVIEW.md  changelog.txt
teamgram-tdesktop/.agents/skills/task-think/: PROMPTS.md  SKILL.md
teamgram-tdesktop/.claude/: iterate.ps1
teamgram-tdesktop/.claude/commands/: planner.md  reflect.md  release.md  withtest.md
teamgram-tdesktop/.github/workflows/: changelog.yml  linux.yml  mac.yml  mac_packaged.yml  snap.yml  win.yml
teamgram-tdesktop/Telegram/: CMakeLists.txt  Telegram.plist  qthelp_url.cpp.diff  r.sh  text_entity.cpp.diff  webview_mac.mm.diff
teamgram-tdesktop/Telegram/Resources/iv_html/: page.js
teamgram-tdesktop/Telegram/SourceFiles/: apiwrap.cpp  apiwrap.h  logs.cpp  mainwidget.cpp  mainwidget.h  tray.cpp  tray_accounts_menu.cpp
teamgram-tdesktop/Telegram/cmake/: td_ui.cmake
teamgram-tdesktop/Telegram/lib_translate/: CMakeLists.txt  translate_provider.h  translate_provider_mac_swift.swift  translate_provider_mac_swift_bridge.h
teamgram-tdesktop/Telegram/lib_ui/: emoji.txt
teamgram-tdesktop/Telegram/lib_webrtc/: CMakeLists.txt
teamgram-tdesktop/docs/: building-linux.md  building-mac.md  building-win.md
teamgram-tdesktop/lib/xdg/: org.telegram.desktop.metainfo.xml
teamgram-tdesktop/snap/: snapcraft.yaml
(+526 files in other folders)
